// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`5.35.0-006 should execute migration 1`] = `
Object {
  "PK": "T#root#L#en-US#CMS#CME#642d3f644d7cdc000821b67e",
  "SK": "L",
  "TYPE": "L",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-04-05T09:29:08.538Z",
  "entity": "CmsEntries",
  "entryId": "642d3f644d7cdc000821b67e",
  "id": "642d3f644d7cdc000821b67e#0001",
  "locale": "en-US",
  "locked": false,
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-04-05T09:32:01.638Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 1 Page 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-04-05T09:29:08.538Z",
      "id": "642d3f644d7cdc000821b67e#0001",
      "locked": true,
      "path": "/untitled-lg3hm56i",
      "pid": "642d3f644d7cdc000821b67e",
      "savedOn": "2023-04-05T09:32:01.638Z",
      "status": "published",
      "title": "Page 1",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 1",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": Any<String>,
}
`;

exports[`5.35.0-006 should execute migration 2`] = `
Object {
  "PK": "T#root#L#en-US#CMS#CME#642d3f644d7cdc000821b67e",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-04-05T09:29:08.538Z",
  "entity": "CmsEntries",
  "entryId": "642d3f644d7cdc000821b67e",
  "id": "642d3f644d7cdc000821b67e#0001",
  "locale": "en-US",
  "locked": false,
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-04-05T09:32:01.638Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 1 Page 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-04-05T09:29:08.538Z",
      "id": "642d3f644d7cdc000821b67e#0001",
      "locked": true,
      "path": "/untitled-lg3hm56i",
      "pid": "642d3f644d7cdc000821b67e",
      "savedOn": "2023-04-05T09:32:01.638Z",
      "status": "published",
      "title": "Page 1",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 1",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": Any<String>,
}
`;

exports[`5.35.0-006 should execute migration 3`] = `
Object {
  "PK": "T#root#L#en-US#CMS#CME#642d401c4d7cdc000821b681",
  "SK": "L",
  "TYPE": "L",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-04-05T09:32:12.436Z",
  "entity": "CmsEntries",
  "entryId": "642d401c4d7cdc000821b681",
  "id": "642d401c4d7cdc000821b681#0001",
  "locale": "en-US",
  "locked": false,
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-04-05T09:37:04.998Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 2 Page 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut sem vitae risus tristique posuere.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-04-05T09:32:12.436Z",
      "id": "642d401c4d7cdc000821b681#0001",
      "locked": false,
      "path": "/untitled-lg3hq32s",
      "pid": "642d401c4d7cdc000821b681",
      "savedOn": "2023-04-05T09:37:04.998Z",
      "status": "draft",
      "title": "Page 2",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 2",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": Any<String>,
}
`;

exports[`5.35.0-006 should execute migration 4`] = `
Object {
  "PK": "T#root#L#en-US#CMS#CME#642d401c4d7cdc000821b681",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-04-05T09:32:12.436Z",
  "entity": "CmsEntries",
  "entryId": "642d401c4d7cdc000821b681",
  "id": "642d401c4d7cdc000821b681#0001",
  "locale": "en-US",
  "locked": false,
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-04-05T09:37:04.998Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 2 Page 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut sem vitae risus tristique posuere.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-04-05T09:32:12.436Z",
      "id": "642d401c4d7cdc000821b681#0001",
      "locked": false,
      "path": "/untitled-lg3hq32s",
      "pid": "642d401c4d7cdc000821b681",
      "savedOn": "2023-04-05T09:37:04.998Z",
      "status": "draft",
      "title": "Page 2",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 2",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": Any<String>,
}
`;

exports[`5.35.0-006 should execute migration 5`] = `
Object {
  "PK": "T#root#L#en-US#CMS#CME#642d3f644d7cdc000821b67e",
  "SK": "L",
  "created": Any<String>,
  "data": Object {
    "compression": "gzip",
    "value": "H4sIAAAAAAAAE6VUTW/bMAz9K4J2dTzns2luG7bDgGEJmqzAdikYi0mIyZIrUQmCIP99tPOBbSi6AoEPtp7IJ/I9ygddeYP2i9ETDaWfI4Ry84ClD0Zneoshknd60s10hC2aqXzrXtHrd4pBpxguivtJvzcpuvmoP/4pCdaXYFFi0HW+zwWIDJyiACbAihtKsAkFOGje103kbDmDNcoOE7epzVJ1BSi9Y3R8hdT59dUHrBTVMVXKeOuDisQKKuRMSU7EkpFTUGCopliSWyu0xLmap1ijMxQjqi0ESlGhI6FyCoOXhcVKDhRaDhSZnhPm6lOiqMoUYoqZqkg9N+stiTQBlA8OAman9FMtJEUHIxwuWQuZSixFVaKyV4agUpaWEi0MDCh5wPlZN26VPuiVtwZD68jDdLrQx6NIERAYzcd9E0CtWaYi16h2UvGylOZqC/tvooagH1pU8qWrsG8pR4Oe6a9Gg4G5K01ZFMW4112O7loD0EErd/C+sep86Aue9+4nxTgfXj3/hUK9Ahsx037nbih0h0ty+8fL3Okil0fC6bXa38lnMzAiMq3ohtOt9BtFAQ5JOln8mH2W3bKKeatfbiXz6elM9TccYPd4new/3BRSAwzXev7XQv1q1Iu35MbReKPLb7r+19tep6WluMF/fyKXWTkJXANvJPh9cm1XpmPX/U01HJHM/PE3xDW2vZoEAAA=",
  },
  "entity": "CmsEntries",
  "index": "root-headless-cms-en-us-acosearchrecord",
  "modified": Any<String>,
}
`;

exports[`5.35.0-006 should execute migration 6`] = `
Object {
  "PK": "T#root#L#en-US#CMS#CME#642d401c4d7cdc000821b681",
  "SK": "L",
  "created": Any<String>,
  "data": Object {
    "compression": "gzip",
    "value": "H4sIAAAAAAAAE6VTTW8aMRD9K5Z7ha33owT2lko9VKoCSmik9hIZewCrXntjj0ErxH/v7JagtI2SSMgH288z43kzbw688RrsV81rLpW/AxnU9haUD5qP+A5CNN7xOh/xKHeg53TmhSjKsajG4tNSzOryqhZVNptNf5KD9UpaIBtw4+93BESUmCIBOsg19iGlTUDAgWPX9paL1UJugF7Q4ODaX1lBgPIOweEZYqftmw/QMNPG1DDtrQ8sGmSyARwx8omgEDAFJrVpTVTGbRhYgxm7SU6xhCyS+86gBBZMTJEhbWgeE7DWxwQBshMVHMgf+NpbDWEo0u18vuTHI2UXQCLoz11vYIb66ca4nsgfYk9XbWJrZXdDCRJ6PaDkT8xCN4ScVIWuRK4qfaW0EkJMi3w1meZ9KHByqEDwvq/e6dOX2lDUeZFV5eTUhl9AodfSRhhxv3cXJLqHlXHd/ZMUuMhokbl5LfcPdOwJkLrM2lzwuyW+kSqAIRGT5Y/FF3pVTcyG+mWWPB8eTqH+hoPc35/F9qybFFRLlOd83qLQvmr1onAvlMY7u/yuifx/AJ/N9D86aSVuyfJjcgMlPbabcvtYFpEEf/wN7E+PtyoEAAA=",
  },
  "entity": "CmsEntries",
  "index": "root-headless-cms-en-us-acosearchrecord",
  "modified": Any<String>,
}
`;
